// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with 1 expense 1`] = `
<div>
  <h3>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </h3>
</div>
`;

exports[`should correctly render ExpensesSummary with multiple expenses 1`] = `
<div>
  <h3>
    Viewing 
    23
     
    expenses
     totalling 
    $232,342.15
  </h3>
</div>
`;

exports[`should render ExpensesSummary Correctly 1`] = `
<div>
  <h3>
    Viewing 
     
    expenses
     totalling 
    $0.00
  </h3>
</div>
`;
